--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"postinstall": "prisma generate",
+		"update_records": "tsx scripts/update_records.ts",
 		"lint": "next lint"
 	},
 	"dependencies": {
@@ -23,6 +24,7 @@
 		"postcss": "^8",
 		"prisma": "^5.6.0",
 		"tailwindcss": "^3.3.0",
+		"tsx": "^4.6.1",
 		"typescript": "^5"
 	}
 }
