--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -1,3 +1,3 @@
 # used in schema.prisma
 POSTGRES_URL_NON_POOLING=""
-POSTGRES_PRISMA_URL=""
+POSTGRES_PRISMA_URL="" # Must include "&pool_timeout=0" to avoid timeout when running large batches
