--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -1,3 +1,8 @@
-# used in schema.prisma
+# Database URLs, used in schema.prisma, see https://www.prisma.io/docs/reference/database-reference/connection-urls
+# If using a Vercel database, you can find the URLs on the database page
 POSTGRES_URL_NON_POOLING=""
 POSTGRES_PRISMA_URL="" # Must include "&pool_timeout=0" to avoid timeout when running large batches
+
+# Sample configuration for a local postgres database
+#POSTGRES_URL_NON_POOLING="postgresql://postgres:myPassword@localhost/dkim_lookup"
+#POSTGRES_PRISMA_URL="postgresql://postgres:myPassword@localhost/dkim_lookup"
