add authorization to cronjob

--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -6,3 +6,7 @@ POSTGRES_PRISMA_URL="" # Must include "&pool_timeout=0" to avoid timeout when ru
 # Sample configuration for a local postgres database
 #POSTGRES_URL_NON_POOLING="postgresql://postgres:myPassword@localhost/dkim_lookup"
 #POSTGRES_PRISMA_URL="postgresql://postgres:myPassword@localhost/dkim_lookup"
+
+# Cron job request authorization, see https://vercel.com/docs/cron-jobs/manage-cron-jobs#securing-cron-jobs
+# For local development, you can choose any string
+CRON_SECRET=""
