--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -1,5 +1,5 @@
 # Database URLs, used in schema.prisma, see https://www.prisma.io/docs/reference/database-reference/connection-urls
-# If using a Vercel database, you can find the URLs on the database page
+# If using Vercel Postgres, these will be automatically configured when a database is connected to the project
 POSTGRES_URL_NON_POOLING=""
 POSTGRES_PRISMA_URL=""
 
@@ -8,5 +8,4 @@ POSTGRES_PRISMA_URL=""
 #POSTGRES_PRISMA_URL="postgresql://postgres:myPassword@localhost/dkim_lookup"
 
 # Cron job request authorization, see https://vercel.com/docs/cron-jobs/manage-cron-jobs#securing-cron-jobs
-# For local development, you can choose any string
 CRON_SECRET=""
