--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"python.analysis.typeCheckingMode": "strict"
+	"python.analysis.typeCheckingMode": "strict",
+	"yapf.args": [
+		"--style=.style.yapf"
+	]
 }
