--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -8,6 +8,7 @@
 		"start": "next start",
 		"postinstall": "prisma generate",
 		"update_records": "tsx scripts/update_records.ts",
+		"try_selectors": "tsx scripts/try_selectors.ts",
 		"lint": "next lint"
 	},
 	"dependencies": {
