--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "5.6.0",
+		"axios": "^1.6.5",
 		"next": "14.0.3",
 		"react": "^18",
 		"react-dom": "^18"
