--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -9,3 +9,7 @@ POSTGRES_PRISMA_URL=""
 
 # Cron job request authorization, see https://vercel.com/docs/cron-jobs/manage-cron-jobs#securing-cron-jobs
 CRON_SECRET=""
+
+# Google OAuth 2.0 Client IDs configuration, https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
