--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -15,6 +15,7 @@
 		"@prisma/client": "5.6.0",
 		"axios": "^1.6.5",
 		"next": "14.0.3",
+		"next-auth": "^4.24.5",
 		"react": "^18",
 		"react-dom": "^18"
 	},
