check if email is authorized

--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -13,3 +13,7 @@ CRON_SECRET=""
 # Google OAuth 2.0 Client IDs configuration, https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+# comma separated list of email addresses that are authorized to use the restricted api endpoints
+# example: AUTHORIZED_EMAIL_ADDRESSES="user1@example.com, user2@example.net"
+AUTHORIZED_EMAIL_ADDRESSES=""
