--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -17,6 +17,9 @@ GOOGLE_CLIENT_SECRET=""
 # NextAuth.js secret, see https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=""
 
+# NextAuth.js URL, see https://next-auth.js.org/configuration/options#nextauth_url
+NEXTAUTH_URL=""
+
 # comma separated list of email addresses that are authorized to use the restricted api endpoints
 # example: AUTHORIZED_EMAIL_ADDRESSES="user1@example.com, user2@example.net"
 AUTHORIZED_EMAIL_ADDRESSES=""
