remove vercel configuration and references, update related docs

--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -1,5 +1,4 @@
 # Database URLs, used in schema.prisma, see https://www.prisma.io/docs/reference/database-reference/connection-urls
-# If using Vercel Postgres, these will be automatically configured when a database is connected to the project
 POSTGRES_URL_NON_POOLING=""
 POSTGRES_PRISMA_URL=""
 
@@ -7,7 +6,7 @@ POSTGRES_PRISMA_URL=""
 #POSTGRES_URL_NON_POOLING="postgresql://postgres:myPassword@localhost/dkim_lookup"
 #POSTGRES_PRISMA_URL="postgresql://postgres:myPassword@localhost/dkim_lookup"
 
-# Cron job request authorization, see https://vercel.com/docs/cron-jobs/manage-cron-jobs#securing-cron-jobs
+# Batch update request authorization
 CRON_SECRET=""
 
 # Google OAuth 2.0 Client IDs configuration, https://console.cloud.google.com/apis/credentials
