--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -12,6 +12,7 @@ CRON_SECRET=""
 # Google OAuth 2.0 Client IDs configuration, https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+GOOGLE_REDIRECT_URI=""
 
 # NextAuth.js secret, see https://next-auth.js.org/configuration/options#secret
 NEXTAUTH_SECRET=""
