--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@prisma/client": "5.6.0",
 		"axios": "^1.6.5",
+		"googleapis": "^131.0.0",
 		"next": "14.0.3",
 		"next-auth": "^4.24.5",
 		"react": "^18",
