--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -1,3 +1,5 @@
+### The following variables are required for the application to work
+
 # Database URLs, used in schema.prisma, see https://www.prisma.io/docs/reference/database-reference/connection-urls
 POSTGRES_URL_NON_POOLING=""
 POSTGRES_PRISMA_URL=""
@@ -6,8 +8,8 @@ POSTGRES_PRISMA_URL=""
 #POSTGRES_URL_NON_POOLING="postgresql://postgres:myPassword@localhost/dkim_lookup"
 #POSTGRES_PRISMA_URL="postgresql://postgres:myPassword@localhost/dkim_lookup"
 
-# Batch update request authorization
-CRON_SECRET=""
+
+### The following variables are only required if you want to use the restricted api endpoints
 
 # Google OAuth 2.0 Client IDs configuration, https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=""
@@ -23,3 +25,9 @@ NEXTAUTH_URL=""
 # comma separated list of email addresses that are authorized to use the restricted api endpoints
 # example: AUTHORIZED_EMAIL_ADDRESSES="user1@example.com, user2@example.net"
 AUTHORIZED_EMAIL_ADDRESSES=""
+
+
+### The following variables are only required if you want to use the cron job
+
+# Batch update request authorization
+CRON_SECRET=""
