--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -9,6 +9,7 @@
 		"postinstall": "prisma generate",
 		"update_records": "tsx scripts/update_records.ts",
 		"try_selectors": "tsx scripts/try_selectors.ts",
+		"check-types": "tsc --noEmit",
 		"lint": "next lint"
 	},
 	"dependencies": {
