--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -14,12 +14,14 @@
 	},
 	"dependencies": {
 		"@prisma/client": "5.6.0",
+		"@witnesswtf/client": "^0.1.13",
 		"axios": "^1.6.5",
 		"googleapis": "^131.0.0",
 		"next": "14.0.3",
 		"next-auth": "^4.24.5",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"viem": "^2.4.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
