--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -14,7 +14,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "5.6.0",
-		"@witnesswtf/client": "^0.1.13",
+		"@witnessco/client": "^0.1.11",
 		"axios": "^1.6.5",
 		"googleapis": "^131.0.0",
 		"next": "14.0.3",
