use witness api key

--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -22,7 +22,14 @@ NEXTAUTH_SECRET=""
 # NextAuth.js URL, see https://next-auth.js.org/configuration/options#nextauth_url
 NEXTAUTH_URL=""
 
+
 ### The following variables are only required if you want to use the cron job
 
 # Batch update request authorization
 CRON_SECRET=""
+
+
+### Configuration for the witness.co API, see https://docs.witness.co/
+
+# API key for witness.co
+WITNESS_API_KEY=""
