--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -13,7 +13,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@prisma/client": "5.6.0",
+		"@prisma/client": "^5.6.0",
 		"@witnessco/client": "^0.1.11",
 		"axios": "^1.6.5",
 		"googleapis": "^131.0.0",
