--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -30,6 +30,9 @@ CRON_SECRET=""
 
 
 ### Configuration for the witness.co API, see https://docs.witness.co/
-
-# API key for witness.co
 WITNESS_API_KEY=""
+
+
+### Configuration for the Upstash Redis REST API
+UPSTASH_REDIS_REST_URL=""
+UPSTASH_REDIS_REST_TOKEN=""
