Revert "add rate limit to api/domains endpoint"
This reverts commit fc1a1c85cf670868871b202814f5d2893726ac5d.

--- a/dkim-lookup-app/.env.example
+++ b/dkim-lookup-app/.env.example
@@ -30,9 +30,6 @@ CRON_SECRET=""
 
 
 ### Configuration for the witness.co API, see https://docs.witness.co/
+
+# API key for witness.co
 WITNESS_API_KEY=""
-
-
-### Configuration for the Upstash Redis REST API
-UPSTASH_REDIS_REST_URL=""
-UPSTASH_REDIS_REST_TOKEN=""
