--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -26,6 +26,7 @@
 		"googleapis": "^133.0.0",
 		"next": "14.1.0",
 		"next-auth": "^4.24.5",
+		"rate-limiter-flexible": "^5.0.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"viem": "^2.7.11"
