change api/add_dsp to POST, add Zod validation

--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -29,7 +29,8 @@
 		"rate-limiter-flexible": "^5.0.0",
 		"react": "^18",
 		"react-dom": "^18",
-		"viem": "^2.7.11"
+		"viem": "^2.7.11",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
