--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -36,9 +36,11 @@
 		"@types/node": "^20",
 		"@types/react": "^18.2.57",
 		"@types/react-dom": "^18",
+		"@types/swagger-ui-react": "^4.18.3",
 		"autoprefixer": "^10.0.1",
 		"postcss": "^8.4.35",
 		"prisma": "^5.10.0",
+		"swagger-ui-react": "^5.11.8",
 		"tsx": "^4.6.1",
 		"typescript": "^5"
 	}
