--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -43,6 +43,7 @@
 		"prisma": "^5.10.0",
 		"swagger-ui-react": "^5.11.8",
 		"tsx": "^4.6.1",
-		"typescript": "^5"
+		"typescript": "^5",
+		"vitest": "^1.3.1"
 	}
 }
