--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -25,6 +25,7 @@
 		"@witnessco/client": "^0.1.11",
 		"axios": "^1.6.5",
 		"googleapis": "^133.0.0",
+		"moment": "^2.30.1",
 		"next": "14.1.0",
 		"next-auth": "^4.24.5",
 		"rate-limiter-flexible": "^5.0.0",
