--- a/dkim-lookup-app/package.json
+++ b/dkim-lookup-app/package.json
@@ -31,6 +31,7 @@
 		"rate-limiter-flexible": "^5.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-intersection-observer": "^9.8.1",
 		"viem": "^2.8.16",
 		"zod": "^3.22.4"
 	},
