restructure project directories

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,11 +8,11 @@
 				"base": "$tsc",
 				"fileLocation": [
 					"relative",
-					"${workspaceFolder}/dkim-lookup-app"
+					"${workspaceFolder}"
 				],
 			},
 			"options": {
-				"cwd": "${workspaceFolder}/dkim-lookup-app"
+				"cwd": "${workspaceFolder}"
 			}
 		}
 	]
