--- a/package.json
+++ b/package.json
@@ -19,33 +19,34 @@
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.4",
-		"@emotion/styled": "^11.11.0",
-		"@mui/material": "^5.15.14",
-		"@prisma/client": "^5.11.0",
+		"@emotion/styled": "^11.11.5",
+		"@mui/material": "^5.15.18",
+		"@prisma/client": "5.11.0",
 		"@witnessco/client": "^0.4.2",
-		"axios": "^1.6.8",
+		"axios": "^1.7.2",
 		"googleapis": "^134.0.0",
 		"moment": "^2.30.1",
 		"next": "14.1.0",
 		"next-auth": "^4.24.7",
-		"rate-limiter-flexible": "^5.0.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-intersection-observer": "^9.8.1",
-		"viem": "^2.9.25",
-		"zod": "^3.22.4"
+		"rate-limiter-flexible": "^5.0.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-intersection-observer": "^9.10.2",
+		"viem": "^2.13.1",
+		"zod": "^3.23.8"
 	},
+	"//": "prisma 5.11.0 needed for Prisma Client Python",
 	"devDependencies": {
-		"@types/node": "^20.11.30",
-		"@types/react": "^18.2.67",
-		"@types/react-dom": "^18.2.22",
+		"@types/node": "^20.12.12",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
 		"@types/swagger-ui-react": "^4.18.3",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
-		"prisma": "^5.11.0",
-		"swagger-ui-react": "^5.12.0",
-		"tsx": "^4.7.1",
-		"typescript": "^5.4.3",
-		"vitest": "^1.4.0"
+		"prisma": "5.11.0",
+		"swagger-ui-react": "^5.17.14",
+		"tsx": "^4.11.0",
+		"typescript": "^5.4.5",
+		"vitest": "^1.6.0"
 	}
 }
