--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/react-dom": "^18.3.0",
 		"@types/swagger-ui-react": "^4.18.3",
 		"autoprefixer": "^10.4.19",
+		"dkim": "^0.8.0",
 		"postcss": "^8.4.38",
 		"prisma": "5.11.0",
 		"swagger-ui-react": "^5.17.14",
