Fixes autocomplete crashing

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@witnessco/client": "^0.4.2",
 		"axios": "^1.7.2",
 		"googleapis": "^137.1.0",
+		"lodash": "^4.17.21",
 		"moment": "^2.30.1",
 		"next": "14.2.3",
 		"next-auth": "^4.24.7",
@@ -37,6 +38,7 @@
 	},
 	"//": "prisma 5.11.0 needed for Prisma Client Python",
 	"devDependencies": {
+		"@types/lodash": "^4.17.10",
 		"@types/node": "^20.12.12",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
